# HealthcareAI

./: .gitignore  Don't Work  README.md  datapassageway.text  md  pyproject.toml
HealthcareAI/: db.sqlite3  manage.py
HealthcareAI/HealthcareAI/: asgi.py  settings.py  urls.py
HealthcareAI/auth/: urls.py  views.py
HealthcareAI/home/: urls.py  views.py
HealthcareAI/home/templates/: base.html  home.html
HealthcareAI/inputForm/: apps.py  forms.py  views.py
HealthcareAI/inputForm/templates/inputForm/: inputForm.html
HealthcareAI/model/: model.py
HealthcareAI/polls/: views.py
HealthcareAI/prediction/: .~lock.heart.csv#  model.py  urls.py  views.py
HealthcareAI/signup/: views.py
HealthcareAI/templates/: about.html  base.html  home.html
HealthcareAI/templates/prediction/: diagnose.html
HealthcareAI/templates/registration/: login.html  signup.html
src/HealthcareAI/: settings.py  urls.py  wsgi.py
