[project]
name = "healthcareai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.3",
    "matplotlib>=3.10.0",
    "mysqlclient>=2.2.7",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["ryan-testing"]
